# real-time-data-streaming-pipeline

./: .gitignore  README.md  pyproject.toml
infrastructure/: docker-compose.yml
scripts/: init_env.sh  run_pipeline.sh
services/api_service/: Dockerfile  config.py  database.py  main_api.py  routes.py
services/ingestion_service/: Dockerfile  api_client.py  config.py  main_ingestion.py  producer.py
services/metrics_consumer/: Dockerfile  main_metrics.py
services/processing_service/: Dockerfile  config.py  consumer.py  main_processing.py  schema.py  transformer.py  validator.py
storage/: db_init.py  schema.sql
tests/: test_pipeline.py
