[project]
name = "climapulse-data-platform"
version = "1.0.0"
description = "Real-time weather data platform using Kafka, Spark, and FastAPI"
readme = "README.md"
requires-python = ">=3.10,<3.12"

dependencies = [
    "loguru>=0.7.2",
    "python-dotenv>=1.0.1",
]

[dependency-groups]

ingestion_service = [
    "kafka-python-ng>=2.2.3",
    "requests>=2.31.0",
]

processing_service = [
    "pyspark==3.5.0",
]

api_service = [
    "fastapi",
    "uvicorn",
    "psycopg2-binary>=2.9.9",
    "prometheus-fastapi-instrumentator"
]

[tool.uv]
python-preference = "only-managed"